--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
     buildFeatures{
         viewBinding true
     }
+    lint{
+        lintConfig file("lint.xml")
+    }
 }
 
 dependencies {
@@ -80,6 +83,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+
+    //library room database
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
