add splash screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,8 +106,12 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+
     // Mockito
     testImplementation 'org.mockito:mockito-core:3.12.4'
+
+    //lottie splash
+    implementation 'com.airbnb.android:lottie:3.6.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
